[addtoarchive]: Add warning dialog about existing file

STEPS TO REPRODUCE:
1. In context menu Dolphin click Compress->Compress to...
2. Enter the name of a file that already exists
3. Click OK

EXPECTED RESULT:
Ark will suggest overwriting the file

OBSERVED RESULT:
Ark will overwrite the file without informing the user

BUG: 446782